// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News ticker Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-news-ticker"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
          </li>
        </ul>
      </div>
    </div>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--m ecl-news-ticker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#information"
      />
    </svg>
    <div
      class="ecl-news-ticker__counter"
    >
      <span
        class="ecl-news-ticker__counter--current"
      >
        1
      </span>
       of 
      <span
        class="ecl-news-ticker__counter--max"
      >
        6
      </span>
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <button
        aria-controls="news-ticker-example-content"
        class="ecl-button ecl-button--primary ecl-news-ticker__prev"
        data-controls="prev"
        data-ecl-news-ticker-prev=""
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <button
        class="ecl-button ecl-button--primary ecl-news-ticker__toggle"
        data-action="stop"
        data-ecl-news-ticker-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#play"
            />
          </svg>
        </span>
      </button>
      <button
        aria-controls="news-ticker-example-content"
        class="ecl-button ecl-button--primary ecl-news-ticker__next"
        data-controls="next"
        data-ecl-news-ticker-next=""
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</jest>
`;

exports[`News ticker Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-news-ticker"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
          </li>
        </ul>
      </div>
    </div>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--m ecl-news-ticker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#information"
      />
    </svg>
    <div
      class="ecl-news-ticker__counter"
    >
      <span
        class="ecl-news-ticker__counter--current"
      >
        1
      </span>
       of 
      <span
        class="ecl-news-ticker__counter--max"
      >
        6
      </span>
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <button
        aria-controls="news-ticker-example-content"
        class="ecl-button ecl-button--primary ecl-news-ticker__prev"
        data-controls="prev"
        data-ecl-news-ticker-prev=""
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <button
        class="ecl-button ecl-button--primary ecl-news-ticker__toggle"
        data-action="stop"
        data-ecl-news-ticker-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#play"
            />
          </svg>
        </span>
      </button>
      <button
        aria-controls="news-ticker-example-content"
        class="ecl-button ecl-button--primary ecl-news-ticker__next"
        data-controls="next"
        data-ecl-news-ticker-next=""
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</jest>
`;

exports[`News ticker Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-news-ticker custom-class custom-class--test"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
            </a>
          </li>
          <li
            aria-hidden="true"
            class="ecl-news-ticker__slide"
            tabindex="-1"
          >
            <a
              class="ecl-link ecl-news-ticker__slide-text"
              href="/example"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
          </li>
        </ul>
      </div>
    </div>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--m ecl-news-ticker__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#information"
      />
    </svg>
    <div
      class="ecl-news-ticker__counter"
    >
      <span
        class="ecl-news-ticker__counter--current"
      >
        1
      </span>
       of 
      <span
        class="ecl-news-ticker__counter--max"
      >
        6
      </span>
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <button
        aria-controls="news-ticker-example-content"
        class="ecl-button ecl-button--primary ecl-news-ticker__prev"
        data-controls="prev"
        data-ecl-news-ticker-prev=""
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <button
        class="ecl-button ecl-button--primary ecl-news-ticker__toggle"
        data-action="stop"
        data-ecl-news-ticker-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#play"
            />
          </svg>
        </span>
      </button>
      <button
        aria-controls="news-ticker-example-content"
        class="ecl-button ecl-button--primary ecl-news-ticker__next"
        data-controls="next"
        data-ecl-news-ticker-next=""
        tabindex="-1"
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</jest>
`;
